--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@hot-loader/react-dom": "^16.14.0",
+    "@types/react-helmet": "^6.1.0",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -65,6 +66,7 @@
     "gh-pages": "^2.2.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.2.1",
+    "react-helmet": "^6.1.0",
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
