--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
+    "react-router-dom": "^5.2.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@babel/preset-react": "^7.12.10",
     "@hot-loader/react-dom": "^16.14.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
