--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prestart": "npm run compile",
     "start": "webpack-dev-server",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [
     "Webcomic",
@@ -55,6 +55,7 @@
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^8.1.0",
     "css-loader": "^3.6.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -66,11 +67,12 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "gh-pages": "^2.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.2.1",
     "react-helmet": "^6.1.0",
     "style-loader": "^1.3.0",
-    "webpack": "^4.44.2",
+    "webpack": "^5.28.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
