--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@material-ui/icons": "^4.11.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "hotkeys-js": "^3.8.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
